# Deep-Learning-from-Scratch

./: README.md  pyproject.toml
01_python/: 1. numpy.ipynb  2. matplotlib.ipynb
02_perceptron/: 01.perceptron.ipynb  02.sigmoid_function.ipynb  03.ReLU_function.ipynb  04.multi_array.ipynb  05.multi_perceptron.ipynb  06.softmax_function.ipynb  07_nn_number.ipynb  08.nn_number_batch.ipynb
