[project]
name = "deep-learning-from-scratch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.3",
    "numpy>=2.2.6",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
